Add schedule section

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -59,6 +59,8 @@
 \input{sections/recommended_statements/adastatement}
 \section*{Hunter College Policy on Sexual Misconduct}
 \input{sections/required_statements/policy_sexual_misconduct}
+\section*{Course Schedule}
+\input{sections/schedule.tex}
 \section*{Syllabus Change Policy}
 \input{sections/syllabus_change_policy}
 
