Make semester changes

--- a/sections/grading_statement.tex
+++ b/sections/grading_statement.tex
@@ -11,7 +11,7 @@ Listed below is the complete breakdown:
         Major Presentations (Expect 2): & 25\% \\
         Weekly Presentations: & 20\% \\
         Professional Presence and Participation: & 10\% \\
-        Period Peer Reports: & 5\% \\
+        Periodic Peer Reports: & 5\% \\
         Final Peer Report: & 5\% \\
         Total: & 100\% \\
     \bottomrule
