--- a/sections/schedule.tex
+++ b/sections/schedule.tex
@@ -1,19 +1,66 @@
 % Example course schedule
 \renewcommand{\arraystretch}{1.5}
+
+% 05/28/2024 - 08/15/2024
+
+% 5/28	Tuesday	Start of Summer Term
+% 5/30	Thursday	Senior Auditor registration
+% 6/10- 6/21	Mon - Fri	Pass/No Credit (P/NC) opt-in period for 5-Wks (1st), 6-Wks & 8-Wks Sessions
+% 6/15	Saturday	Deadline to apply for Summer 2024 graduation
+% 6/19	Wednesday	College Closed
+% 7/04	Thursday	College Closed
+% 7/15	Monday	Last day to declare major effective for Summer 2024 term
+% 7/18	Thursday	R2T4 60% Date
+% 7/22-8/2	Mon - Fri	Pass/No Credit (P/NC) opt-in period for 11-Wks, 5-Wks (2nd), 7-Wks & 5-Wks (3rd) Sessions
+% 8/20	Tuesday	End of Summer Term
+
 \begin{tabular}{ | l | l |  }
     \hline
-    Week 1: & January 31, 2024 - Introductions, Syllabus and Course Overview \\
+    Week 1: & May 28th, 2024 - Introductions, Syllabus and Course Overview \\
     \hline
-    Week 2: & etc.... \\
+    Week 1: & May 30th, 2024 - \\
     \hline
-    Week 3: & etc... \\
+    Week 2: & June 4th, 2024 - \\ 
+    \hline:
+    Week 2: & June 6th, 2024 - \\ 
     \hline
-    Week 4: & etc... \\
+    Week 3: & June 11th, 2024 - \\ 
+    \hline:
+    Week 3: & June 13th, 2024 - \\ 
     \hline
-    Week x: & ... \\
+    Week 4: & June 18th, 2024 - \\ 
+    \hline:
+    Week 4: & June 20th, 2024 - \\ 
     \hline
-    Final & May 22, 2024 - Final Presentations - Peer Report Due \\
+    Week 5: & June 25th, 2024 - \\ 
+    \hline:
+    Week 5: & June 27th, 2024 - \\ 
     \hline
+    Week 6: & July 2nd, 2024 - \\ 
+    % \hline:
+    % Week 6: & July 4th, 2024 - \\ 
+    \hline
+    Week 7: & July 9th, 2024 - \\ 
+    \hline:
+    Week 7: & July 11th, 2024 - \\ 
+    \hline
+    Week 8: & July 16th, 2024 - \\ 
+    \hline:
+    Week 8: & July 18th, 2024 - \\ 
+    \hline
+    Week 9: & July 23rd, 2024 - \\ 
+    \hline:
+    Week 9: & July 25th, 2024 - \\ 
+    \hline
+    Week 10: & July 30th, 2024 - \\ 
+    \hline:
+    Week 10: & August 1st, 2024 - \\ 
+    \hline
+    Week 11: & August 6th, 2024 - \\ 
+    \hline:
+    Week 11: & August 8th, 2024 - \\ 
+    \hline
+    Final: & August 15th, 2024 - \\ 
 \end{tabular}
 \\ \\
 \textit{Note: Schedule is tentative and subject to change}
