--- a/config.tex
+++ b/config.tex
@@ -5,19 +5,19 @@
 
 % Course Information
 \newcommand{\coursenumber}{CSCI 49900}      % e.g. CSCI 49900
-\newcommand{\coursesection}{02}             % Section number
-\newcommand{\semester}{Summer 2023}         % Semester Year
-\newcommand{\coursetitle}{Course Title}     % Course Title
-\newcommand{\modality}{Online Synchronous}  % Modality of the course, e.g., In-Person, Hybrid, Online Synchronous
+\newcommand{\coursesection}{01}             % Section number
+\newcommand{\semester}{Summer 2024}         % Semester Year
+\newcommand{\coursetitle}{Advanced Applications: A Capstone For Majors}     % Course Title
+% \newcommand{\modality}{Online Synchronous}  % Modality of the course, e.g., In-Person, Hybrid, Online Synchronous
 \newcommand{\room}{Classroom Location}      % Class location, e.g. HN C107 or Hunter North C107
 \newcommand{\prerequisites}{CSCI 33500 and CSCI 34000} % Course prerequisites
 
 % Instructor information
-\newcommand{\instructor}{Instructor Name}   % Full name
-\newcommand{\email}{example.email@hunter.cuny.edu}
-\newcommand{\officehours}{Day at Time in Location} % Office hours
-\newcommand{\coursetime}{Days and Times}    % Course meeting times, e.g. Mondays and Tuesdays from 5:00 PM - 8:00 PM
+\newcommand{\instructor}{Charles Richards}   % Full name
+\newcommand{\email}{cericha@hunter.cuny.edu}
+\newcommand{\officehours}{By Appointment} % Office hours
+\newcommand{\coursetime}{TuTh 5:45PM - 8:03PM}    % Course meeting times, e.g. Mondays and Tuesdays from 5:00 PM - 8:00 PM
 
 % Other information
-\newcommand{\absences}{Allowed Absences} % Number of allowed absences without penalty
+\newcommand{\absences}{3} % Number of allowed absences without penalty
 
