--- a/config.tex
+++ b/config.tex
@@ -8,15 +8,15 @@
 \newcommand{\coursesection}{01}             % Section number
 \newcommand{\semester}{Summer 2024}         % Semester Year
 \newcommand{\coursetitle}{Advanced Applications: A Capstone For Majors}     % Course Title
-% \newcommand{\modality}{Online Synchronous}  % Modality of the course, e.g., In-Person, Hybrid, Online Synchronous
-\newcommand{\room}{Classroom Location}      % Class location, e.g. HN C107 or Hunter North C107
+\newcommand{\modality}{Online Synchronous}  % Modality of the course, e.g., In-Person, Hybrid, Online Synchronous
+% \newcommand{\room}{Classroom Location}      % Class location, e.g. HN C107 or Hunter North C107
 \newcommand{\prerequisites}{CSCI 33500 and CSCI 34000} % Course prerequisites
 
 % Instructor information
 \newcommand{\instructor}{Charles Richards}   % Full name
 \newcommand{\email}{cericha@hunter.cuny.edu}
 \newcommand{\officehours}{By Appointment} % Office hours
-\newcommand{\coursetime}{TuTh 5:45PM - 8:03PM}    % Course meeting times, e.g. Mondays and Tuesdays from 5:00 PM - 8:00 PM
+\newcommand{\coursetime}{Tu Th 5:45PM - 8:03PM}    % Course meeting times, e.g. Mondays and Tuesdays from 5:00 PM - 8:00 PM
 
 % Other information
 \newcommand{\absences}{3} % Number of allowed absences without penalty
