--- a/sections/course_details.tex
+++ b/sections/course_details.tex
@@ -3,8 +3,8 @@
 % Online-Synchronous
 \begin{itemize}[label={},leftmargin=0pt]
     \item Course Time: \coursetime
-    % \item Modality: \modality % In-Person, Hybrid, Online, etc..
-    \item Room: \room % Comment out if course is online
+    \item Modality: \modality % In-Person, Hybrid, Online, etc..
+    % \item Room: \room % Comment out if course is online
     \item Instructor: \instructor
     \item Email: \email
     % \item Office Location: \officelocation
