--- a/sections/schedule.tex
+++ b/sections/schedule.tex
@@ -16,51 +16,52 @@
 
 \begin{tabular}{ | l | l |  }
     \hline
-    Week 1: & May 28th, 2024 - Introductions, Syllabus and Course Overview \\
+    Week 1 & May 28th, 2024 - Introductions, Syllabus and Course Overview \\
     \hline
-    Week 1: & May 30th, 2024 - \\
+    Week 1 & May 30th, 2024 - Form Groups, Individual Project Ideas \\
     \hline
-    Week 2: & June 4th, 2024 - \\ 
-    \hline:
-    Week 2: & June 6th, 2024 - \\ 
+    Week 2 & June 4th, 2024 - Group Project Pitches \\ 
     \hline
-    Week 3: & June 11th, 2024 - \\ 
-    \hline:
-    Week 3: & June 13th, 2024 - \\ 
+    Week 2 & June 6th, 2024 - Group Project Proposal \\ 
     \hline
-    Week 4: & June 18th, 2024 - \\ 
-    \hline:
-    Week 4: & June 20th, 2024 - \\ 
+    Week 3 & June 11th, 2024 - Group Project Wireframe \textbackslash \ Architecture\\ 
     \hline
-    Week 5: & June 25th, 2024 - \\ 
-    \hline:
-    Week 5: & June 27th, 2024 - \\ 
+    Week 3 & June 13th, 2024 - Project Update  \\ 
     \hline
-    Week 6: & July 2nd, 2024 - \\ 
-    % \hline:
-    % Week 6: & July 4th, 2024 - \\ 
+    Week 4 & June 18th, 2024 - Project Update - Peer Report Due\\ 
     \hline
-    Week 7: & July 9th, 2024 - \\ 
-    \hline:
-    Week 7: & July 11th, 2024 - \\ 
+    Week 4 & June 20th, 2024 - Code Presentations \\ 
     \hline
-    Week 8: & July 16th, 2024 - \\ 
-    \hline:
-    Week 8: & July 18th, 2024 - \\ 
+    Week 5 & June 25th, 2024 - Project Update \\ 
     \hline
-    Week 9: & July 23rd, 2024 - \\ 
-    \hline:
-    Week 9: & July 25th, 2024 - \\ 
+    Week 5 & June 27th, 2024 - Research and Technology Reports \\ 
     \hline
-    Week 10: & July 30th, 2024 - \\ 
-    \hline:
-    Week 10: & August 1st, 2024 - \\ 
+    Week 6 & July 2nd, 2024 - Project Update \\ 
+    % \hline
+    % Week 6 & July 4th, 2024 - \\ 
     \hline
-    Week 11: & August 6th, 2024 - \\ 
-    \hline:
-    Week 11: & August 8th, 2024 - \\ 
+    Week 7 & July 9th, 2024 -  Project Milestone Presentation \\ 
     \hline
-    Final: & August 15th, 2024 - \\ 
+    Week 7 & July 11th, 2024 - Project Update - Peer Report Due \\ 
+    \hline
+    Week 8 & July 16th, 2024 - Project Update \\ 
+    \hline
+    Week 8 & July 18th, 2024 - Research and Technology Reports \\ 
+    \hline
+    Week 9 & July 23rd, 2024 - Project Update \\ 
+    \hline
+    Week 9 & July 25th, 2024 - Project Update \\ 
+    \hline
+    Week 10 & July 30th, 2024 - Project Update - Peer Report Due\\ 
+    \hline
+    Week 10 & August 1st, 2024 - Code Presentations \\ 
+    \hline
+    Week 11 & August 6th, 2024 - Project Update \\ 
+    \hline
+    Week 11 & August 8th, 2024 - Project Update \\ 
+    \hline
+    Final: & August 15th, 2024 - Final Presentations - Peer Report Due \\ 
+    \hline
 \end{tabular}
 \\ \\
 \textit{Note: Schedule is tentative and subject to change}
