--- a/sections/grading_statement.tex
+++ b/sections/grading_statement.tex
@@ -1,6 +1,14 @@
 % Example grading policy
-Grades will be based on several aspects. The project, worth 35\% of your grade, will involve pitching an idea, designing and presenting your design, and then implementing and programming your project. You will work with a team of 2 to 4 other students. This grade will be determined in part by my evaluation of the project and in part by your team members' evaluation of your contribution. Periodic presentations and written reports, reporting on peers and progress, will account for 55\% of your grade. Professional presence and participation will account for the rest of the grade (10\%).
-Listed below is the complete breakdown:
+Grades will be based on several aspects.
+The project, worth 35\% of your grade, will involve pitching an idea, designing and presenting your design, and then implementing and programming your project. Each group will receive a project grade, and each student receives a weighted individual project grade.
+You will work with a team of 2 to 4 and no more than 5 other students.
+Periodic presentations and written reports, reporting on peers and progress, will account for 60\% of your grade.
+
+The Participation, Effort and Contributions grade will be determined in part by my evaluation of your contributions, your class participation and in part by your team members' evaluation of your contributions.
+Your final project grade is determined by the following calcuation: $(\mathcal{A}/5.0)*(\mathcal{P})$, where $\mathcal{A}$ is your Participation, Effort and Contributions grade, and $\mathcal{P}$ is your group project grade.
+
+\textbf{You must receive a passing grade (60/100) on your individual project grade to pass this course.} See below the complete breakdown:
+
 \par\vspace{1cm}
 % Grading Breakdown
 \begin{tabular}{ @{}ll@{} }
@@ -8,11 +16,11 @@ Listed below is the complete breakdown:
         Area & Percentage \\
     \midrule
         Project: & 35\% \\
-        Major Presentations (Expect 2): & 25\% \\
+        Major Presentations (Expect 2): & 20\% \\
         Weekly Presentations: & 20\% \\
-        Professional Presence and Participation: & 10\% \\
-        Periodic Peer Reports: & 5\% \\
-        Final Peer Report: & 5\% \\
+        Participation, Effort and Contributions: & 5\% \\
+        Research and Technology Reports: & 10\% \\
+        Periodic Peer Reports: & 10\% \\
         Total: & 100\% \\
     \bottomrule
 \end{tabular}
