Change grading statement

--- a/sections/grading_statement.tex
+++ b/sections/grading_statement.tex
@@ -7,7 +7,7 @@ Periodic presentations and written reports, reporting on peers and progress, wil
 The Participation, Effort and Contributions grade will be determined in part by my evaluation of your contributions, your class participation and in part by your team members' evaluation of your contributions.
 Your final project grade is determined by the following calcuation: $(\mathcal{A}/5.0)*(\mathcal{P})$, where $\mathcal{A}$ is your Participation, Effort and Contributions grade, and $\mathcal{P}$ is your group project grade.
 
-\textbf{You must receive a passing grade (60/100) on your individual project grade to pass this course.} See below the complete breakdown:
+\textbf{You must receive a grade of (55/100) on your individual project grade to pass this course.} See below the complete breakdown:
 
 \par\vspace{1cm}
 % Grading Breakdown
