--- a/sections/grading_statement.tex
+++ b/sections/grading_statement.tex
@@ -5,7 +5,7 @@ You will work with a team of 2 to 4 and no more than 5 other students.
 Periodic presentations and written reports, reporting on peers and progress, will account for 60\% of your grade.
 
 The Participation, Effort and Contributions grade will be determined in part by my evaluation of your contributions, your class participation and in part by your team members' evaluation of your contributions.
-Your final project grade is determined by the following calcuation: $(\mathcal{A}/5.0)*(\mathcal{P})$, where $\mathcal{A}$ is your Participation, Effort and Contributions grade, and $\mathcal{P}$ is your group project grade.
+Your final project grade is determined by the following calculation: $(\mathcal{A}/5.0)*(\mathcal{P})$, where $\mathcal{A}$ is your Participation, Effort and Contributions grade (out of 5 points), and $\mathcal{P}$ is your group project grade.
 
 \textbf{You must receive a grade of (55/100) on your individual project grade to pass this course.} See below the complete breakdown:
 
