--- a/sections/course_description.tex
+++ b/sections/course_description.tex
@@ -1,2 +1,2 @@
 % Example course description
-This course is a chance for Computer Science majors to test their mettle on major projects. Working in small groups, each group will pitch their project, then design and implement it, using at least two platforms and at least three programming languages.
+This course serves as a comprehensive introduction to computer architecture and related topics, with the MIPS Instruction Set Architecture (ISA) as the focal point for unfolding these concepts. Key topics include MIPS assembly language and architecture, performance measurement, operands, memory access, logical operations, and branching. Through this course, students will gain a deeper understanding of the software-hardware interface.
