--- a/sections/grading_statement.tex
+++ b/sections/grading_statement.tex
@@ -1,18 +1,21 @@
 % Example grading policy
-Grades will be based on several aspects. The project, worth 35\% of your grade, will involve pitching an idea, designing and presenting your design, and then implementing and programming your project. You will work with a team of 2 to 4 other students. This grade will be determined in part by my evaluation of the project and in part by your team members' evaluation of your contribution. Periodic presentations and written reports, reporting on peers and progress, will account for 55\% of your grade. Professional presence and participation will account for the rest of the grade (10\%).
-Listed below is the complete breakdown:
+Homework and projects will constitute 35\% of the grade. Short comprehension quizzes worth 10\%
+will be administered throughout the semester during class. The midterm and final collectively make up 55\% of your grade.
+
+Homework assignments will be assigned regularly, and will be due within one or two classes of assignment. Expect at least 1-2 assignments per week.
+As this is a summer course, the course will move quickly; it is essential to complete the homeworks to succeed in this course.
+
+See the grading breakdown below:
 \par\vspace{1cm}
 % Grading Breakdown
 \begin{tabular}{ @{}ll@{} }
     \toprule
         Area & Percentage \\
     \midrule
-        Project: & 35\% \\
-        Major Presentations (Expect 2): & 25\% \\
-        Weekly Presentations: & 20\% \\
-        Professional Presence and Participation: & 10\% \\
-        Period Peer Reports: & 5\% \\
-        Final Peer Report: & 5\% \\
+        Homeworks and Project: & 35\% \\
+        Quizzes: & 10\% \\
+        Midterm: & 25\% \\
+        Final: & 30\% \\
         Total: & 100\% \\
     \bottomrule
 \end{tabular}
