--- a/sections/required_statements/learning_outcomes.tex
+++ b/sections/required_statements/learning_outcomes.tex
@@ -1,2 +1,2 @@
 % https://www.hunter.cuny.edu/academicassessment/HowTo/AssessMyCourse/IdentifyCLOs
-Goals and learning outcomes go here
+By taking this course, you will understand the fundamental principles of computer architecture. You will learn the MIPS RISC architecture and gain a solid understanding of the hardware-software interface. You will be able to write programs in MIPS, relate these programs to higher-level languages, and comprehend their execution at the hardware level. Additionally, you will explore how architectural decisions impact software performance and system efficiency.
