--- a/sections/schedule.tex
+++ b/sections/schedule.tex
@@ -1,21 +1,162 @@
 % Example course schedule
+
+% 05/28/2024-07/11/2024
+
+% May 27	Monday	Last day to drop for 100% tuition refund
+% College Closed
+% May 28	Tuesday	Session 1 (6 Wks) begins. First day of classes
+% Waitlist option not available for Summer classes
+% May 31	Friday	Last day to add or change a course section
+% June 1	Saturday	Last day to drop for 50% tuition refund
+% VOE rosters available to faculty
+% Withdrawal Drop (WD) period begins
+% June 6	Thursday	Last day to drop for 25% tuition refund
+% Withdrawal Drop (WD) period ends
+% VOE rosters due to assign WN grades
+% June 7	Friday	Withdrawal (W) period begins
+% June 10 - 21	Mon - Fri	Pass/No Credit (P/NC) opt-in period
+% June 19	Wednesday	College closed
+% July 2	Tuesday	No classes scheduled
+% July 4	Thursday	College closed
+% July 10	Wednesday	Withdrawal (W) period ends
+% July 11	Thursday	Last day of the 6-Weeks classes
+% Grade rosters available to faculty
+% July 16	Tuesday	Deadline to submit final grade rosters
+
+% \renewcommand{\arraystretch}{1.5}
+% \begin{tabular}{ | l | l | l | }
+%     Week & Day / Topic & Reading \\
+%     \hline
+%     Week 1: & May 29th, 2024 -  Syllabus, Introduction, Measuring Performance & Ch. 1 All \\
+%     \hline
+%     Week 1: & June 3rd, 2024 - MIPS ISA, Intro to Mips, Operand (\& memory access) & Ch 2.1-2.3 \\
+%     \hline
+%     Week 2: & June 5th, 2024 - Operands, Logical Operations / Bit Twiddling, Branching & Ch 2.3, 2.4, 2.6, 2.7 \\
+%     \hline
+%     Week 2: & June 10th, 2024 - Branching, Loops, Signed and Unsigned Numbers & Ch 2.7, Ch 2.4 \\
+%     \hline
+%     Week 3: & June 12th, 2024 - Function Conventions and Procedures & Ch 2.8, handout \\
+%     \hline
+%     Week 3: & June 17th, 2024 - \textbf{Midterm}, Instruction Representation, Characters and Strings, 32-bit Operands and Addresses & Ch 2.5, 2.9, 2.10\\
+%     \hline
+%     % Week 4: & June 19th, 2024 - & \\
+%     % \hline
+%     Week 4: & June 24th, 2024 - MIPS Addressing Modes, Systems Software & Ch. 2.12, 2.15 \\
+%     \hline
+%     Week 5: & June 26th, 2024 - Support for Parallelism, Major features of other ISAs & Ch. 2.11, 2.16-2.19 \\
+%     \hline
+%     Week 5: & July 1st, 2024 - Multiplication and Division, C Data Structures, Basic Hardware Elements & Ch. 3.3-3.4, TBA \\
+%     \hline
+%     Week 6: & July 3rd, 2024 - Introduction to Processor Design, Single Cycle MIPS & 4.1-4.4\\
+%     \hline
+%     Week 6: & July 8th, 2024 - Single Cycle Continued, Performance Analysis, Multicycle & 4.3-4.4, 4.5\\
+%     \hline 
+%     Final: & July 10th, 2024 - & Final Exam \\
+%     \hline
+% \end{tabular}
+% \\ \\
+% \textit{Note: Schedule is tentative and subject to change}
+
+% \renewcommand{\arraystretch}{1.5}
+% \begin{tabular}{ | l | p{10cm} | l | }
+%     \hline
+%     Week & Day / Topic & Reading \\
+%     \hline
+%     Week 1: & May 29th, 2024 - Syllabus, Introduction, Measuring Performance, MIPS ISA, Intro to MIPS & Ch. 1 All, Ch 2.1 \\
+%     \hline
+%     Week 1: & June 3rd, 2024 - MIPS ISA, Intro to MIPS, Operands (\& memory access), Logical Operations & Ch 2.1-2.3, 2.6 \\
+%     \hline
+%     Week 2: & June 5th, 2024 - Logical Operations / Bit Twiddling, Branching, Loops & Ch 2.3, 2.4, 2.6, 2.7 \\
+%     \hline
+%     Week 2: & June 10th, 2024 - Signed and Unsigned Numbers, Function Convention and Procedures & Ch 2.4, 2.7, handout \\
+%     \hline
+%     Week 3: & June 12th, 2024 - Function Conventions and Procedures, Instruction Representation, Characters and Strings & Ch 2.5, 2.8, 2.9, handout \\
+%     \hline
+%     Week 3: & June 17th, 2024 - \textbf{Test 1}, 32-bit Operands and Addresses, MIPS Addressing Modes & Ch 2.10 \\
+%     \hline
+%     Week 4: & June 24th, 2024 - Systems Software, Support for Parallelism & Ch. 2.11, 2.12, 2.15,  \\
+%     \hline
+%     Week 5: & June 26th, 2024 - Major features of other ISAs, Multiplication and Division, C Data Structures & Ch. 2.16-2.19, 3.3-3.4 \\
+%     \hline
+%     Week 5: & July 1st, 2024 - Basic Hardware Elements, Introduction to Processor Design & Ch. 4.1-4.2, Selected Readings \\
+%     \hline
+%     Week 6: & July 3rd, 2024 - Single Cycle MIPS Architecture: Datapath and Control Path, Performance Analysis & 4.1-4.4 \\
+%     \hline
+%     Week 6: & July 8th, 2024 - MIPS Multicycle Arcchitecture, Other Select Topics & 4.5\\
+%     \hline 
+%     Final: & July 10th, 2024 - & \textbf{Final Exam} \\
+%     \hline
+% \end{tabular}
+% \\ \\
+% \textit{Note: Schedule is tentative and subject to change}
+
+
+% \renewcommand{\arraystretch}{1.5}
+% \begin{tabular}{ | l | p{10cm} | l | }
+%     \hline
+%     Week & Day / Topic & Reading \\
+%     \hline
+%     Week 1: & May 29th, 2024 - Syllabus, Introduction, Measuring Performance, MIPS ISA, Intro to MIPS & Ch. 1 All, Ch 2.1 \\
+%     \hline
+%     Week 1: & June 3rd, 2024 - MIPS ISA, Intro to MIPS, Operands (\& memory access), Logical Operations & Ch 2.1-2.3, 2.6 \\
+%     \hline
+%     Week 2: & June 5th, 2024 - Logical Operations / Bit Twiddling, Branching, Loops & Ch 2.3, 2.4, 2.6, 2.7 \\
+%     \hline
+%     Week 2: & June 10th, 2024 - Signed and Unsigned Numbers, Function Conventions and Procedures & Ch 2.4, 2.7, handout \\
+%     \hline
+%     Week 3: & June 12th, 2024 - Function Conventions and Procedures, Instruction Representation, Characters and Strings & Ch 2.5, 2.8, 2.9, handout \\
+%     \hline
+%     Week 3: & June 17th, 2024 - \textbf{Test 1}, 32-bit Operands and Addresses, MIPS Addressing Modes & Ch 2.10 \\
+%     \hline
+%     Week 4: & June 24th, 2024 - Systems Software, Support for Parallelism & Ch. 2.11, 2.12, 2.15 \\
+%     \hline
+%     Week 5: & June 26th, 2024 - Major Features of Other ISAs, Multiplication and Division, C Data Structures & Ch. 2.16-2.19, 3.3-3.4 \\
+%     \hline
+%     Week 5: & July 1st, 2024 - Basic Hardware Elements, Introduction to Processor Design & Ch. 4.1-4.2, Selected Readings \\
+%     \hline
+%     Week 6: & July 3rd, 2024 - Single Cycle MIPS Architecture: Datapath and Control Path, Performance Analysis & Ch 4.1-4.4 \\
+%     \hline
+%     Week 6: & July 8th, 2024 - MIPS Multicycle Architecture, Other Select Topics & Ch 4.5 \\
+%     \hline 
+%     Final: & July 10th, 2024 - & \textbf{Final Exam} \\
+%     \hline
+% \end{tabular}
+% \\ \\
+% \textit{Note: Schedule is tentative and subject to change}
+
+
 \renewcommand{\arraystretch}{1.5}
-\begin{tabular}{ | l | l |  }
+\begin{tabular}{ | l | L{9cm} | L{3cm} | }
     \hline
-    Week 1: & January 31, 2024 - Introductions, Syllabus and Course Overview \\
+    Date & Day / Topic & Reading \\
     \hline
-    Week 2: & etc.... \\
+    May 29th, 2024 & Syllabus, Introduction, Measuring Performance, MIPS ISA, Intro to MIPS & Ch. 1 All, Ch 2.1 \\
     \hline
-    Week 3: & etc... \\
+    June 3rd, 2024 & MIPS ISA, Intro to MIPS, Operands (\& memory access), Logical Operations & Ch 2.1-2.3, 2.6 \\
     \hline
-    Week 4: & etc... \\
+    June 5th, 2024 & Logical Operations / Bit Twiddling, Branching, Loops & Ch 2.3, 2.4, 2.6, 2.7 \\
     \hline
-    Week x: & ... \\
+    June 10th, 2024 & Signed and Unsigned Numbers, Function Conventions and Procedures & Ch 2.4, 2.7, handout \\
     \hline
-    Final & May 22, 2024 - Final Presentations - Peer Report Due \\
+    June 12th, 2024 & Function Conventions and Procedures, Instruction Representation, Characters and Strings & Ch 2.5, 2.8, 2.9, handout \\
+    \hline
+    June 17th, 2024 & \textbf{Test 1}, 32-bit Operands and Addresses, MIPS Addressing Modes & Ch 2.10 \\
+    \hline
+    June 24th, 2024 & Systems Software, Support for Parallelism & Ch. 2.11, 2.12, 2.15 \\
+    \hline
+    June 26th, 2024 & Major Features of Other ISAs, Multiplication and Division, C Data Structures & Ch. 2.16-2.19, 3.3-3.4 \\
+    \hline
+    July 1st, 2024 & Basic Hardware Elements, Introduction to Processor Design & Ch. 4.1-4.2, Selected Readings \\
+    \hline
+    July 3rd, 2024 & Single Cycle MIPS Architecture: Datapath and Control Path, Performance Analysis & Ch 4.1-4.4 \\
+    \hline
+    July 8th, 2024 & MIPS Multicycle Architecture, Other Select Topics & Ch 4.5 \\
+    \hline 
+    July 10th, 2024 & \textbf{Final Exam} & \\
     \hline
 \end{tabular}
 \\ \\
 \textit{Note: Schedule is tentative and subject to change}
 
-    
+
+
