--- a/sections/textbooks.tex
+++ b/sections/textbooks.tex
@@ -1,6 +1,4 @@
 % Examples given below for three textbooks for a course
 \begin{itemize}
-    \item Software Engineering, Sommerville, I. ISBN 9780133943030. 2015, Pearson Education. 10th edition.
-    \item Cryptography Engineering: Design Principles and Practical Applications, Niels Ferguson, Bruce Schneier, Tadayoshi Kohno. ISBN 9780470474242. 2010, Wiley. 10th edition.
-    \item RESTful API Design, Matthias Biehl, ISBN 9781514735169. 2016, CreateSpace Independent Publishing Platform
+    \item Computer Organization and Design MIPS Edition 6th edition. David A. Patterson; John L. Hennessy. ISBN 9780128201091 - Make sure to get the MIPS version.
 \end{itemize}
