--- a/sections/schedule.tex
+++ b/sections/schedule.tex
@@ -140,7 +140,7 @@
     \hline
     June 12th, 2024 & Function Conventions and Procedures, Instruction Representation, Characters and Strings & Ch 2.5, 2.8, 2.9, handout \\
     \hline
-    June 17th, 2024 & \textbf{Test 1}, 32-bit Operands and Addresses, MIPS Addressing Modes & Ch 2.10 \\
+    June 17th, 2024 & \textbf{Midterm}, 32-bit Operands and Addresses, MIPS Addressing Modes & Ch 2.10 \\
     \hline
     June 24th, 2024 & Systems Software, Support for Parallelism & Ch. 2.11, 2.12, 2.15 \\
     \hline
