--- a/sections/course_description.tex
+++ b/sections/course_description.tex
@@ -1,2 +1,2 @@
 % Example course description
-This course is a chance for Computer Science majors to test their mettle on major projects. Working in small groups, each group will pitch their project, then design and implement it, using at least two platforms and at least three programming languages.
+This course is a chance for Computer Science minors to test their mettle on major projects. Working in small groups, each group will pitch their project, then design and implement it. Each project should have a backend, and a frontend component. It is encouraged for students in this class to draw topics for these projects from their majors and other interests.
