--- a/sections/schedule.tex
+++ b/sections/schedule.tex
@@ -1,21 +1,52 @@
-% Example course schedule
 \renewcommand{\arraystretch}{1.5}
+
+% 08/28/2024 - 12/21/2024
+
+% 8/28    Wednesday    Fall 2024 semester begins
+% 9/2     Monday        College closed
+% 9/3     Tuesday       Last day to add or swap a course
+% 10/2 – 10/4  Wednesday – Friday    No classes scheduled
+% 10/11 – 10/12  Friday – Saturday    No classes scheduled
+% 10/14   Monday        College is closed
+% 10/15   Tuesday       Classes follow Monday schedule
+% 11/27   Wednesday     Classes follow Friday schedule
+% 11/28 – 11/29 Thursday – Friday    College is closed
+% 11/30 – 12/1  Saturday – Sunday   No classes scheduled
+% 12/15 – 12/21 Sunday – Saturday   Final Examinations
+% 12/21   Saturday      Fall 2024 semester ends
+
 \begin{tabular}{ | l | l |  }
     \hline
-    Week 1: & January 31, 2024 - Introductions, Syllabus and Course Overview \\
+    Week 1 & August 28th, 2024 - Introductions, Syllabus and Course Overview \\
     \hline
-    Week 2: & etc.... \\
+    Week 2 & September 4th, 2024 - Form Groups, Individual Project Ideas \\
     \hline
-    Week 3: & etc... \\
+    Week 3 & September 11th, 2024 - Group Project Pitches \\ 
     \hline
-    Week 4: & etc... \\
+    Week 4 & September 18th, 2024 - Group Project Proposal \\ 
     \hline
-    Week x: & ... \\
+    Week 5 & September 25th, 2024 - Group Project Wireframe \textbackslash \ Architecture\\ 
     \hline
-    Final & May 22, 2024 - Final Presentations - Peer Report Due \\
+    Week 6 & October 9th, 2024 - Project Update - Peer Report Due \\ 
+    \hline
+    Week 7 & October 16th, 2024 - Project Update \\ 
+    \hline
+    Week 8 & October 23rd, 2024 - Project Update \\ 
+    \hline
+    Week 9 & October 30th, 2024 - Project Update \\ 
+    \hline
+    Week 10 & November 6th, 2024 - Project Milestone Presentations \\ 
+    \hline
+    Week 11 & November 13th, 2024 - Project Update - Peer Report Due \\ 
+    \hline
+    Week 12 & November 20th, 2024 - Project Update \\ 
+    \hline
+    Week 13 & December 4th, 2024 - Project Update \\ 
+    \hline
+    Week 14 & December 11th, 2024 - Project Update \\ 
+    \hline
+    Final: & December 18th, 2024 - Final Presentations - Peer Report Due \\ 
     \hline
 \end{tabular}
 \\ \\
 \textit{Note: Schedule is tentative and subject to change}
-
-    
