--- a/syllabus.tex
+++ b/syllabus.tex
@@ -45,8 +45,8 @@
 \input{sections/course_description}
 \section*{Prerequisites}
 \input{sections/prerequisites}
-\section*{Textbook}
-\input{sections/textbooks} % Specify if any or all textbooks are optionl
+% \section*{Textbook}
+% \input{sections/textbooks} % Specify if any or all textbooks are optionl
 \section*{Grading}
 \input{sections/grading_statement}
 \section*{Goals}
