--- a/syllabus.tex
+++ b/syllabus.tex
@@ -50,15 +50,17 @@
 \section*{Grading}
 \input{sections/grading_statement}
 \section*{Goals}
-\input{sections/required_statements/learning_outcomes}
+\input{sections/required_statements/senate_requirement/learning_outcomes}
 \section*{Attendance}
 \input{sections/attendance}
 \section*{Academic Integrity}
-\input{sections/required_statements/academic_integrity}
+\input{sections/required_statements/senate_requirement/academic_integrity}
 \section*{ADA Statement}
 \input{sections/recommended_statements/adastatement}
 \section*{Hunter College Policy on Sexual Misconduct}
-\input{sections/required_statements/policy_sexual_misconduct}
+\input{sections/required_statements/senate_requirement/policy_sexual_misconduct}
+\section*{Anti-Bullying and Cyberbullying Policy}
+\input{sections/required_statements/cs_department_requirement/bullying.tex}
 \section*{Course Schedule}
 \input{sections/schedule.tex}
 \section*{Syllabus Change Policy}
