Add changes for spring semester

--- a/config.tex
+++ b/config.tex
@@ -5,8 +5,8 @@
 
 % Course Information
 \newcommand{\coursenumber}{CSCI 49900}      % e.g. CSCI 49900
-\newcommand{\coursesection}{01}             % Section number
-\newcommand{\semester}{Summer 2024}         % Semester Year
+\newcommand{\coursesection}{06}             % Section number
+\newcommand{\semester}{Spring 2025}         % Semester Year
 \newcommand{\coursetitle}{Advanced Applications: A Capstone For Majors}     % Course Title
 \newcommand{\modality}{Online Synchronous}  % Modality of the course, e.g., In-Person, Hybrid, Online Synchronous
 % \newcommand{\room}{Classroom Location}      % Class location, e.g. HN C107 or Hunter North C107
@@ -16,7 +16,7 @@
 \newcommand{\instructor}{Charles Richards}   % Full name
 \newcommand{\email}{cericha@hunter.cuny.edu}
 \newcommand{\officehours}{By Appointment} % Office hours
-\newcommand{\coursetime}{Tu Th 5:45PM - 8:03PM}    % Course meeting times, e.g. Mondays and Tuesdays from 5:00 PM - 8:00 PM
+\newcommand{\coursetime}{Mo We 5:30PM - 7:20PM}    % Course meeting times, e.g. Mondays and Tuesdays from 5:00 PM - 8:00 PM
 
 % Other information
 \newcommand{\absences}{3} % Number of allowed absences without penalty
