--- a/syllabus.tex
+++ b/syllabus.tex
@@ -45,7 +45,7 @@
 \input{sections/course_description}
 \section*{Prerequisites}
 \input{sections/prerequisites}
-\section*{Textbook}
+\section*{Textbook (Optional)}
 \input{sections/textbooks} % Specify if any or all textbooks are optionl
 \section*{Grading}
 \input{sections/grading_statement}
