--- a/sections/schedule.tex
+++ b/sections/schedule.tex
@@ -1,69 +1,86 @@
 % Example course schedule
 \renewcommand{\arraystretch}{1.5}
 
-% 05/28/2024 - 08/15/2024
+% 01/25/2025 - 05/15/2025
 
-% 5/28	Tuesday	Start of Summer Term
-% 5/30	Thursday	Senior Auditor registration
-% 6/10- 6/21	Mon - Fri	Pass/No Credit (P/NC) opt-in period for 5-Wks (1st), 6-Wks & 8-Wks Sessions
-% 6/15	Saturday	Deadline to apply for Summer 2024 graduation
-% 6/19	Wednesday	College Closed
-% 7/04	Thursday	College Closed
-% 7/15	Monday	Last day to declare major effective for Summer 2024 term
-% 7/18	Thursday	R2T4 60% Date
-% 7/22-8/2	Mon - Fri	Pass/No Credit (P/NC) opt-in period for 11-Wks, 5-Wks (2nd), 7-Wks & 5-Wks (3rd) Sessions
-% 8/20	Tuesday	End of Summer Term
+% 1/29	Wednesday	No classes scheduled
+% 2/12	Wednesday	College closed
+% 2/17	Monday	College closed
+% 2/18	Tuesday	Classes follow Monday schedule
+% 3/6	Thursday	Classes follow Wednesday schedule
+% 3/31	Monday	No classes scheduled
+% 4/12-20	Saturday-Sunday	Spring Recess. No classes scheduled
+% 5/15	Thursday	Last day of classes before Finals
+% 5/16-22	Friday-Thursday	Final Examinations
+% Spring 2025 semester ends
+
 
 \begin{tabular}{ | l | l |  }
     \hline
-    Week 1 & May 28th, 2024 - Introductions, Syllabus and Course Overview \\
+    Week 1 & Jan 27th, 2025 - Introductions, Syllabus and Course Overview \\
+    % 1/29	Wednesday	No classes scheduled
     \hline
-    Week 1 & May 30th, 2024 - Form Groups, Individual Project Ideas \\
+    Week 2 & Feb 3rd, 2025 - Form Groups, Individual Project Ideas \\ 
     \hline
-    Week 2 & June 4th, 2024 - Group Project Pitches \\ 
+    Week 2 & Feb 5th, 2025 - Group Project Pitches  \\ 
     \hline
-    Week 2 & June 6th, 2024 - Group Project Proposal \\ 
+    Week 3 & Feb 10th, 2025 - Group Project Proposal \\ 
+    % 2/12	Wednesday	College closed
+    % 2/17	Monday	College closed
     \hline
-    Week 3 & June 11th, 2024 - Group Project Wireframe \textbackslash \ Architecture\\ 
+    Week 4 & Feb 18th, 2025 - Group Wireframe, Architecture and Technology Review \\
     \hline
-    Week 3 & June 13th, 2024 - Project Update  \\ 
+    Week 4 & Feb 19th, 2025 - Continued Presentations from previous day \\ %Tuesday -> Monday Schedule
     \hline
-    Week 4 & June 18th, 2024 - Project Update - Peer Report Due\\ 
+    Week 5 & Feb 24th, 2025 - Project Update \\ 
     \hline
-    Week 4 & June 20th, 2024 - Code Presentations \\ 
+    Week 5 & Feb 26th, 2025 - Scheduled Meetings - Individual \\ 
     \hline
-    Week 5 & June 25th, 2024 - Project Update \\ 
+    Week 6 & Mar 3rd, 2025 - Project Update \\ 
     \hline
-    Week 5 & June 27th, 2024 - Research and Technology Reports \\ 
+    Week 6 & Mar 5th, 2025 - Code Presentation \\
     \hline
-    Week 6 & July 2nd, 2024 - Project Update \\ 
-    % \hline
-    % Week 6 & July 4th, 2024 - \\ 
+    Week 6 & Mar 6th, 2025 - Scheduled Meetings - Individual - Peer Reports Due \\ % Thursday -> Wednesday Schedule
     \hline
-    Week 7 & July 9th, 2024 -  Project Milestone Presentation \\ 
+    Week 7 & Mar 10th, 2025 - Project Update \\ 
     \hline
-    Week 7 & July 11th, 2024 - Project Update - Peer Report Due \\ 
+    Week 7 & Mar 12th, 2025 - Scheduled Meetings - Group \\ 
     \hline
-    Week 8 & July 16th, 2024 - Project Update \\ 
+    Week 8 & Mar 17th, 2025 - Project Update \\ 
     \hline
-    Week 8 & July 18th, 2024 - Research and Technology Reports \\ 
+    Week 8 & Mar 19th, 2025 - Scheduled Meetings - Group \\ 
     \hline
-    Week 9 & July 23rd, 2024 - Project Update \\ 
+    Week 9 & Mar 24th, 2025 - Project Milestone Presentation \\ 
     \hline
-    Week 9 & July 25th, 2024 - Project Update \\ 
+    Week 9 & Mar 26th, 2025 - To Be Determined \\ 
+    % 3/31	Monday	No classes scheduled
     \hline
-    Week 10 & July 30th, 2024 - Project Update - Peer Report Due\\ 
+    Week 10 & Apr 2nd, 2025 - Project Update \\ 
     \hline
-    Week 10 & August 1st, 2024 - Code Presentations \\ 
+    Week 11 & Apr 7th, 2025 - Project Update \\ 
     \hline
-    Week 11 & August 6th, 2024 - Project Update \\ 
+    Week 11 & Apr 9th, 2025 - To Be Determined - Peer Report Due \\ 
     \hline
-    Week 11 & August 8th, 2024 - Project Update \\ 
+    % 4/12-20    Spring Recess. No classes
+    Week 12 & Apr 21st, 2025 - Project Update \\
     \hline
-    Final: & August 15th, 2024 - Final Presentations - Peer Report Due \\ 
+    Week 12 & Apr 23rd, 2025 - Code Presentation \\
+    \hline
+    Week 13 & Apr 28th, 2025 - Project Update \\
+    \hline
+    Week 13 & Apr 30th, 2025 - Scheduled Meetings - Group \\
+    \hline
+    Week 14 & May 5th, 2025 - Project Update \\
+    \hline
+    Week 14 & May 7th, 2025 - Scheduled Meetings - Group \\
+    \hline
+    Week 15 & May 12th, 2025 - Final Presentation Practice Presentations \\
+    \hline
+    Week 15 & May 14th, 2025 - To Be Determined \\
+    \hline
+    Final: & May 21st, 2025 - Final Presentations - Peer Report Due \\
     \hline
 \end{tabular}
-\\ \\
+\\
 \textit{Note: Schedule is tentative and subject to change}
-
     
