Add recommended ai academic integrity policy

--- a/syllabus.tex
+++ b/syllabus.tex
@@ -55,6 +55,7 @@
 \input{sections/attendance}
 \section*{Academic Integrity}
 \input{sections/required_statements/senate_requirements/academic_integrity}
+\input{sections/recommended_statements/academic_integrity_ai}
 \section*{ADA Statement}
 \input{sections/recommended_statements/adastatement}
 \section*{Hunter College Policy on Sexual Misconduct}
