Change description in schedule

--- a/sections/schedule.tex
+++ b/sections/schedule.tex
@@ -34,21 +34,21 @@
     \hline
     Week 5 & Feb 24th, 2025 - Project Update \\ 
     \hline
-    Week 5 & Feb 26th, 2025 - Scheduled Meetings - Individual \\ 
+    Week 5 & Feb 26th, 2025 - Scheduled Meetings \\ 
     \hline
     Week 6 & Mar 3rd, 2025 - Project Update \\ 
     \hline
     Week 6 & Mar 5th, 2025 - Code Presentation \\
     \hline
-    Week 6 & Mar 6th, 2025 - Scheduled Meetings - Individual - Peer Reports Due \\ % Thursday -> Wednesday Schedule
+    Week 6 & Mar 6th, 2025 - Scheduled Meetings - Peer Reports Due \\ % Thursday -> Wednesday Schedule
     \hline
     Week 7 & Mar 10th, 2025 - Project Update \\ 
     \hline
-    Week 7 & Mar 12th, 2025 - Scheduled Meetings - Group \\ 
+    Week 7 & Mar 12th, 2025 - Scheduled Meetings \\ 
     \hline
     Week 8 & Mar 17th, 2025 - Project Update \\ 
     \hline
-    Week 8 & Mar 19th, 2025 - Scheduled Meetings - Group \\ 
+    Week 8 & Mar 19th, 2025 - Scheduled Meetings \\ 
     \hline
     Week 9 & Mar 24th, 2025 - Project Milestone Presentation \\ 
     \hline
@@ -68,11 +68,11 @@
     \hline
     Week 13 & Apr 28th, 2025 - Project Update \\
     \hline
-    Week 13 & Apr 30th, 2025 - Scheduled Meetings - Group \\
+    Week 13 & Apr 30th, 2025 - Scheduled Meetings \\
     \hline
     Week 14 & May 5th, 2025 - Project Update \\
     \hline
-    Week 14 & May 7th, 2025 - Scheduled Meetings - Group \\
+    Week 14 & May 7th, 2025 - Scheduled Meetings \\
     \hline
     Week 15 & May 12th, 2025 - Final Presentation Practice Presentations \\
     \hline
